2013-03-09  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: MPEG program stream reader: tracks with
        invalid video properties (e.g. width or height = 0) are ignored
        properly.

        * mkvmerge: bug fix: The progress percentage was sometimes using
        the wrong input file as the reference if multiple files are read
        with the "additional parts" mechanism (on the command line: the
        syntax "( VTS_01_1.VOB VTS_1_2.VOB VTS_1_3.VOB )".

        * mkvmerge: bug fix: Fixed one situation that could lead to
        mkvmerge aborting with the error message "Re-rendering track
        headers: data_size != 0 not implemented yet".

2013-03-03  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: removal: Support for BZ2 (bzlib) and LZO (lzo1x)
        compression has been removed.

        * mmg: bug fix: Using drag & drop to add playlists will no longer
        lock the dragging application (e.g. Windows Explorer) in D&D mode
        for the duration of the scan for other playlists.

        * mmg: bug fix: The validation for the argument to "split by
        chapters" was wrongfully rejecting certain valid inputs (chapter
        number lists in which the second or any later chapter number was
        higher than 9).

        * all: enhancement on Windows: all programs now determine the
        interface language to use from the user's selected interface
        language (C function "GetUserDefaultUILanguage()"), not from the
        locale setting. Implements #852.

2013-03-02  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.1.0.

2013-02-24  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: Fixed mkvmerge sometimes mistakenly detecting
        MPEG-1 video in MPEG program streams as AVC/h.264. Fixes #845.

        * mmg: new feature: When a playlist file (e.g. MPLS Blu-ray
        playlist) is added mmg can optionally scan all the other files in