@@ -235,3 +235,4 @@ T_386flv_vp6f:a0ab8eb0dedf2c8c472e818794c2ad64:passed:20130121-223417:0.18788110
 T_387mp4_free_invalid_size:f3deb6abb3f60c0de606e166353a71b1:passed:20130216-003333:0.04107827
 T_388split_parts_and_chapters:e1bc3ec155ec33bca8eec967aceab25a-389c3bd6f8eca14fea4ef663a59b2e83-04fa29b52eb8d4962edf4f010548b375:passed:20130216-203522:0.690018077
 T_389mpeg1_in_ps_misdetected_as_avc:5ee2d016952f533fb028364ca45c41ef:passed:20130224-132738:1.205560654
+T_390timecode_info_on_resync:ok+ok:passed:20130318-185621:0.115461517
